tests/paczka1/small_fuzzy/68528478.err
Error in line 2: Uj5JLk1C S300 56,3
Error in line 3: opCmtkQrz3 S776 34,8
Error in line 13: Uj5JLk1C A711 7,83
